--- a/content/blog/2019-03-08-xPoints.Rmd
+++ b/content/blog/2019-03-08-xPoints.Rmd
@@ -1,17 +1,18 @@
 ---
 title: '...xPoints?'
 description: "Translating advanced player performance metrics into fantasy football points potential."
-date: '2019-03-04'
+date: '2019-03-08'
 slug: xPoints
 tags: ["football", "fpl"]
-draft: yes
+image: "/blog/2019-03-08-xPoints_files/figure-html/simple-xGA-1.png"
+draft: no
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = TRUE, out.width = '75%', dev = c('svg', 'png'), fig.align='center')
 ```
 
-To anyone paying attention over the last couple of years, some "advanced" football metrics (or expected goals, at least) seem to have successfully navigated the five stages of ~~grief~~ haranguing from the media charged with upholding the "magic" of the game. Imagine peak Lawrenson and Hansen placed in this scene:
+To anyone paying attention over the last couple of years, some "advanced" football metrics (or expected goals, at least) seem to have successfully navigated the five stages of ~~grief~~ haranguing from the media charged with upholding the "magic" of the game. Imagine peak Lawrenson and Hansen in this scene:
 
 <blockquote class="twitter-tweet" data-lang="en-gb"><p lang="en" dir="ltr">The stats don&#39;t look great but <a href="https://twitter.com/jjenas8?ref_src=twsrc%5Etfw">@jjenas8</a> says Brighton will be fine. <a href="https://twitter.com/hashtag/motd2?src=hash&amp;ref_src=twsrc%5Etfw">#motd2</a> <a href="https://t.co/JrXglJEy96">pic.twitter.com/JrXglJEy96</a></p>&mdash; Match of the Day (@BBCMOTD) <a href="https://twitter.com/BBCMOTD/status/1094731648178913280?ref_src=twsrc%5Etfw">10 February 2019</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -20,7 +21,7 @@ Back in August 2017, [StatsBomb's Ted Knutson predicted](https://statsbomb.com/2
 
 > Create an entire new generation of highly educated fans and coaches who view the game itself in a more knowledgeable light.
 
-[Fantasy Premier League](https://fantasy.premierleague.com/) (FPL) is the official fantasy football game of the [Premier League](https://en.wikipedia.org/wiki/Premier_League), with more than five million "managers" (plus many thousands of passive agressive workplace league rivalries) and counting. FPL managers, particularly those taking it seriously/semi-seriously, probably represent an early adopter population in Ted's above prophecy - fans with a vested interest in gaining competitive advantage. It definitely shows... [Michael Caley chatting to the FML FPL podcast](http://fmlfpl.libsyn.com/ep-161-fireside-chat-with-michael-caley) recently, for one.
+[Fantasy Premier League](https://fantasy.premierleague.com/) (FPL) is the official fantasy football game of the [Premier League](https://en.wikipedia.org/wiki/Premier_League), with more than five million "managers" (plus many thousands of passive aggressive workplace league rivalries) and counting. FPL managers, particularly those taking it seriously/semi-seriously, probably represent an early adopter population in Ted's above prophecy - fans with a vested interest in gaining competitive advantage. It definitely shows... [Michael Caley chatting to the FML FPL podcast](http://fmlfpl.libsyn.com/ep-161-fireside-chat-with-michael-caley) recently, for one.
 
 I think there's some appetite around for this stuff. What's also interesting to me is that, as an application of metrics like expected goals (xG), fantasy football player evaluation is a far simpler optimisation problem than the real thing. Especially for attacking players, FPL player evaluation is predominantly about *individual goal contributions* (goals and assists) because they result in *points* (three for an assist, while grabbing a goal equals four or five points for midfielders and forwards respectively). Other contributions to general play can be glossed over for the most part, even the "pre-assist", hence why the original FPL valuation for N'Golo Kanté (£5.0m) was so much lower than Sadio Mané's (£9.5m) in the current (2018/19) season.
 
@@ -31,7 +32,7 @@ Therefore, a useful FPL evaluation of attacking players could be made using metr
 
 These can subsequently be combined to form an **expected goals contributions** measure, and thus a shorthand for understanding which attacking FPL assets to consider. So, what's the hold-up?
 
-## Some helpers I made earlier
+## Some helpers I made earlier `r emo::ji("help")`
 
 Turns out that getting at the data should be quite simple - I've already authored a pair of R packages ready for the job. 
 
@@ -65,7 +66,7 @@ epl_player_stats <- purrr::map_dfr(unique(epl_team_stats$team_name), get_team_pl
 epl_player_stats
 ```
 
-There isn't a common identifier for joining across datasets, so a bit of prep is required to help join the datasets (e.g. standardising team/player names). Names are annoying, so I missed off some recoding of non-descript (read: little minutes) attacking players. Sorry.
+There isn't a common identifier for joining across datasets, so a bit of prep is required to help join the datasets (e.g. standardising team/player names). Names are annoying, so I missed off some recoding of non-descript (read: little minutes) attacking players.[^fullcode] Sorry.
 
 ```{r data-cleaning, echo=FALSE}
 library(dplyr)
@@ -121,7 +122,7 @@ player_stats <- left_join(
 player_stats
 ```
 
-Let's get some of these numbers on the board, already. I'll start with a simple scatterplot of xG90 vs xA90, and also mark out players' FPL positions (PS - the chart styles come courtesy of another personal pkg, [ewenthemes](https://github.com/ewenme/ewenthemes)).
+Let's get some of these numbers on the board, already. I'll start with a simple scatter plot of xG90 vs xA90, and also mark out players' FPL positions (PS - the chart styles come courtesy of another personal pkg, [ewenthemes](https://github.com/ewenme/ewenthemes)).
 
 ```{r simple-xGA, out.width="100%", echo=FALSE}
 
@@ -130,15 +131,18 @@ library(ewenthemes)
 library(scico)
 library(ggrepel)
 
+update_geom_font_defaults(family = "Work Sans Light", size = 3)
+
 ggplot(player_stats, aes(x = xG_90, y = xA_90)) +
   geom_point(aes(colour = position)) +
   # add chart labels
   labs(title = "Expected goals contributions, 2018/19",
-       subtitle = "Expected goals (xG) and expected assists (xA) per 90 minutes. Positions as defined in Fantasy Premier League (FPL).\nPlayers with less than 900 minutes removed.",
+       subtitle = "Expected goals (xG) and expected assists (xA) per 90 minutes. Positions as defined in Fantasy\nPremier League (FPL). Players with less than 900 minutes removed.",
        x = "xG per 90", y = "xA per 90", caption = "source: understat.com, fantasy.premierleague.com | @ewen_") +
   # add data labels
   geom_text_repel(aes(label = web_name), 
-                  data = filter(player_stats, ntile(xG_90, 10) == 10 | ntile(xA_90, 10) == 10)) +
+                  data = filter(player_stats, ntile(xG_90, 10) == 10 | ntile(xA_90, 10) == 10),
+                  family = "Work Sans Light", size = 3) +
   # set colours
   scale_colour_scico_d(palette = "hawaii") +
   # add my chart theme
@@ -147,13 +151,13 @@ ggplot(player_stats, aes(x = xG_90, y = xA_90)) +
 
 ```
 
-This is *starting* to look useful for an FPL manager. It's possible to spot players who are regularly creating and getting goalscoring opportunities. A bit more work is needed to identify who the best picks are.
+This is *starting* to look useful for an FPL manager. It's possible to spot players who are regularly creating and getting goalscoring opportunities. A bit more work is needed to actually identify who the best picks are, based on these metrics.
 
-## Speaking the same language
+## Speaking the same language `r emo::ji("speech")`
 
-First, it's probably more helpful to express these expected contributions in terms that are familiar to FPL managers, and take account of the different rewards based on player position. 
+First, it's probably more helpful to express these expected contributions in terms that are familiar to FPL managers, and take account of the different rewards based on player position. Remember, goals turn into different points for midfielders (5) and forwards (4). Expected assists can similarly be expressed as a rate of FPL points. How does the rate of attacking points scoring stack up?
 
-```{r xPoints-calc, echo=FALSE}
+```{r xPoints-calc, out.width="100%", echo=FALSE}
 library(ghibli)
 
 player_stats <- player_stats %>% 
@@ -175,17 +179,18 @@ player_stats %>%
   coord_flip() +
   # add chart labels
   labs(title = "Points from expected goals contributions, 2018/19",
-       subtitle = "Top 20 expected FPL points (xP) from goals and assists per 90 minutes. Players with less than 900 minutes removed.",
+       subtitle = "Top 20 expected FPL points (xP) from goals and assists per 90 minutes.\nPlayers with less than 900 minutes removed.",
        x = NULL, y = "xP per 90", caption = "source: understat.com, fantasy.premierleague.com | @ewen_") +
   # add my chart theme
-  theme_ewen_ws(grid = "X", axis = FALSE, axis_text_size = 9, subtitle_size = 10) +
+  theme_ewen_ws(grid = "X", axis = FALSE, axis_text_size = 9, subtitle_size = 10,
+                plot_title_size = 14) +
   theme(axis.text.y = element_text(family = "Work Sans Light"))
 
 ```
 
+Now it's easier to differentiate a Mo' and a Kun, for example. Still, crucial information has been left out thus far - **player price**. Each FPL player is attributed a cost in £millions. By adjusting for this, players who represent the best value can be unearthed. 
 
-
-```{r value-calc, echo=FALSE}
+```{r value-calc, out.width="100%", echo=FALSE}
 player_stats %>% 
   top_n(20, xGA_90_points/now_cost) %>% 
   ggplot(aes(x = reorder(web_name, xGA_90_points/now_cost), y = xGA_90_points/now_cost)) +
@@ -193,10 +198,24 @@ player_stats %>%
   coord_flip() +
   # add chart labels
   labs(title = "Points per £m from expected goals contributions, 2018/19",
-       subtitle = "Top 20 expected FPL points per £m (xPm) from goals and assists per 90 mins. Players with less than 900 minutes removed.",
+       subtitle = "Top 20 expected FPL points per £m (xPm) from goals and assists per 90 mins.\nPlayers with less than 900 minutes removed.",
        x = NULL, y = "xPm per 90", caption = "source: understat.com, fantasy.premierleague.com | @ewen_") +
   # add my chart theme
-  theme_ewen_ws(grid = "X", axis = FALSE, axis_text_size = 9, subtitle_size = 10) +
+  theme_ewen_ws(grid = "X", axis = FALSE, axis_text_size = 9, subtitle_size = 10,
+                plot_title_size = 12) +
   theme(axis.text.y = element_text(family = "Work Sans Light"))
 ```
 
+Ashley Barnes and Danny Ings, Turf Moor behemoths present and past, top the charts here. 
+
+## Reprise `r emo::ji("crystal")`
+
+This was a fairly quick run-through of how advanced football metrics can be expressed in fantasy football terms, using some bits of kit I've built and shared that I felt guilty about not using much. There are things I think could be explored to make this better:
+
+- A linearly optimized fantasy team (h/t [Martin Eastwood](https://github.com/martineastwood/penalty/tree/master/fantasy_football_optimiser)), but an expected points variant.
+- Predicting expected clean sheet rate
+    - Clean sheets are v important in FPL. Modelling teams' expected clean sheet rate would allow for an expected points linear optimization for an entire squad. 
+- Account for penalties
+    - The xG figures in here include penalties. Preferable would be non-penalty goals with pens captured differently. 
+    
+[^fullcode]: To keep the post concise I don't show all of the code, especially code that generates figures. But you can find all the code [here](https://github.com/rbind/ewenme/blob/master/content/blog/2019-01-26-xPoints.Rmd).
