add audio player shortcode

--- a/content/blog/2018-05-11-bathing-tapes-vol-one.Rmd
+++ b/content/blog/2018-05-11-bathing-tapes-vol-one.Rmd
@@ -10,11 +10,37 @@ draft: no
 
 Last month I recorded a studio mix at home on the 1210s, the first volume of an occasional series for me to share sounds I'm bumping heavy. I'm calling it *bathing tapes* (don't @ me, [Nigo](https://en.wikipedia.org/wiki/Nigo)), 'cos most of the jams won't sound out of place during an extended exfoliation session. but you should enjoy the soothing vibes wherever you're at. Find experimental techno diversions, Houston hip-hop, ethereal footwork waves, bleepy dancehall and more sweet infusions inside.
 
-<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/434633817&color=%231d191f&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+```{r echo=FALSE}
+blogdown::shortcode('player', 'https://www.dropbox.com/s/fm2xp2d8hj6ths3/bathing_tapes_vol_one.mp3')
+```
 
-**PS you can d/l the mix [here](https://dl.dropboxusercontent.com/s/fm2xp2d8hj6ths3/bathing_tapes_vol_one.mp3?dl=1)**
-
-All credit and thank you to the creators of these tracks. Full tracklist over on [soundcloud](https://soundcloud.com/3w3n/bathing-tapes-vol-one) `r emo::ji("eyes")` but some new artists in there you should go check for... [object blue](https://objectblue.carrd.co/), [Ciel](https://soundcloud.com/cl_lit), [DJ Python](https://soundcloud.com/wnkrs) to name a few.
+*Ciel - Terracotta [Allergy Season x Discwoman, 2018]*  
+*Leif - Moment Beat [Galdoors, 2016]*  
+*Parris - Hanging with the Birds [TTT, 2017]*  
+*Beatrice Dillon & Call Super - Inkjet [Hessle Audio, 2017]*  
+*Future - Lie To Me [Freebandz, 2016]*  
+*Aurora Halal - Sleep Distortion [Mutual Dreaming Recordings, 2015]*  
+*Cute Heels - Silence Complot [Black Leather Records, 2011]*  
+*object blue - Even In You [Tobago Tracks, 2018]*  
+*Helm - After Dark (Sky H1 Remix)[Alter, 2018]*  
+*Skee Mask - Skreet Lvl Dub [Ilian Tape, 2017]*  
+*Knxwledge - Relapse (feat. Traffic) [Adult Swim, 2018]*  
+*Ugly God - No Lies (feat. Wiz Khalifa) [Asylum Records, 2017]*  
+*Jessy Lanza - Could B U (DJ Taye X DJ Spinn Remix) [Hyperdub, 2016]*  
+*Rich The Kid - End of Discussion (feat. Lil Wayne) [Interscope, 2018]*  
+*Zora Jones - Ruby Fifths (feat. Heavee) [Fractal Fantasy, 2016]*  
+*Terekke - l8r h8r [Music From Memory, 2018]*  
+*Florentino - 2 Late (Don't Call) [feat. Ms. Nina] [Mixpak, 2018]*  
+*Cassie - Me&U [Bad Boy, 2005]*  
+*Errorsmith - Retired Low Level Server [PAN, 2017]*  
+*Bad Gyal - Blink [Canada Editorial, 2018]*  
+*Endgame - Sittin' Here Redux [Hyperdub, 2016]*  
+*Trim - 13th Apostle [1-800 Dinosaur, 2016]*  
+*Lil Wayne - SUWU [Gangsta Grillz, 2017]*  
+*v1984 - Too Much [Knives, 2017]*  
+*Laksa - Hallyah [Ilian Tape, 2017]*  
+*RAMZi - Fly Timoun [12th Isle, 2017]*  
+*Dj Python - Todo Era Azul (Versio n Afuera) [Incienso, 2017]*  
 
 This is something of a break from the usual content I have posted here. In 2017, I started this blog to write about and share examples of my work in data science/data sci-adjacent areas. The work of [Yihui](https://yihui.name/) in creating [blogdown](https://github.com/rstudio/blogdown) made it fun to share technical posts and give back to the [R](https://www.r-project.org/) community, something I did with regularity last year.
 
